--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
             <li><strong>Hex Vega</strong> (drums) – Keeps the heartbeat of the band with explosive percussion and rhythmic scars.</li>
         </ul>
         <div class="gallery">
-            <img src="images/female-piano.jpg" alt="Nyx Vale at Piano"/>
-            <img src="images/male-rapper.jpg" alt="Riot Cain Screaming"/>
+            <img src="images/female-piano.jpg.png" alt="Nyx Vale at Piano"/>
+            <img src="images/male-rapper.jpg.png" alt="Riot Cain Screaming"/>
         </div>
     </section>
     <section class="gallery-grid">
         <h2>Gallery</h2>
-        <img src="images/band-candid.jpg" alt="Band Candid"/>
-        <img src="images/live-stage.jpg" alt="Band Live on Stage"/>
-        <img src="images/low-angle-rap.jpg" alt="Low Angle Rapper"/>
+        <img src="images/band-candid.jpg.png" alt="Band Candid"/>
+        <img src="images/live-stage.jpg.png" alt="Band Live on Stage"/>
+        <img src="images/low-angle-rap.jpg.png" alt="Low Angle Rapper"/>
     </section>
     <section class="contact">
         <h2>Join the Broken Army</h2>
