--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         <div class="overlay">
             <h1>Age of the Broken</h1>
             <p>"We don't shine — we survive."</p>
-            <a href="https://suno.com/song/e35436df-2a00-4ce0-9259-3421426fceef?sh=FjCSS40TJLL1FE2t" target="_blank" class="btn">Listen to Concrete Halo</a>
+          <audio autoplay loop>
+  <source src="audio/age-of-the-broken-final.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>audio controls autoplay loop>
         </div>
     </header>
     <section class="about">
