--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header class="hero" style="background-image: url('images/band-hero.jpg');">
+    <header class="hero" style="background-image:('images/band-hero.jpg');">
         <div class="overlay">
             <h1>Age of the Broken</h1>
             <p>"We don't shine — we survive."</p>
@@ -50,5 +50,13 @@
     <footer>
         &copy; 2025 Age of the Broken. All rights reserved.
     </footer>
-</body>
+</body>{
+  background-image: url('images/backdrop.jpg.png');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-color: #000; /* fallback in case image doesn't load */
+  color: #f5f5f5; /* ensures good contrast */
+}
 </html>
