--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Age of the Broken</h1>
             <p>"We don't shine — we survive."</p>
 <audio controls autoplay loop>
-  <source src="audio/age-of-the-broken-final.mp3" type="audio/mpeg">
+  <source src="audio/age of the broken final.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
         </div>
