--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
     <footer>
         &copy; 2025 Age of the Broken. All rights reserved.
     </footer>
-</body>{
-  background-image: url('images/backdrop.jpg.png');
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-color: #000; /* fallback in case image doesn't load */
-  color: #f5f5f5; /* ensures good contrast */
+</body> <button onclick="document.getElementById('main-audio').play()" style="margin-top: 1rem;">
+  ▶️ Play Concrete Halo
+</button>
+
+<audio id="main-audio" loop>
+  <source src="audio/concrete-halo.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 }
 </html>
